--- a/TilbudsApp/TilbudsApp.csproj
+++ b/TilbudsApp/TilbudsApp.csproj
@@ -119,14 +119,21 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\RelayCommand.cs" />
+    <Compile Include="Handler\ByerHandler.cs" />
     <Compile Include="Model\Butik.cs" />
     <Compile Include="Model\Singleton\ButikSingleton.cs" />
     <Compile Include="Model\Singleton\ByerSingleton.cs" />
     <Compile Include="Model\Firma.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\Singleton\FirmaSingleton.cs" />
+    <Compile Include="Model\Singleton\ItemSingleton.cs" />
+    <Compile Include="Model\Singleton\TilbudItemSingleton.cs" />
     <Compile Include="Model\TilbudItem.cs" />
     <Compile Include="Persistency\ButikPersistencyService.cs" />
     <Compile Include="Persistency\FirmaPersistencyService.cs" />
+    <Compile Include="Persistency\ItemPersistencyService.cs" />
+    <Compile Include="Persistency\TilbudItemPersistencyService.cs" />
     <Compile Include="ViewModel\ByerViewModel.cs" />
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -172,9 +179,7 @@
       <Version>12.0.2</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
