--- a/TilbudsApp/TilbudsApp.csproj
+++ b/TilbudsApp/TilbudsApp.csproj
@@ -134,8 +134,10 @@
     <Compile Include="Persistency\FirmaPersistencyService.cs" />
     <Compile Include="Persistency\ItemPersistencyService.cs" />
     <Compile Include="Persistency\TilbudItemPersistencyService.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\ButikViewModel.cs" />
     <Compile Include="ViewModel\ByerViewModel.cs" />
+    <Compile Include="ViewModel\TilbudVM.cs" />
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
