--- a/TilbudsApp/TilbudsApp.csproj
+++ b/TilbudsApp/TilbudsApp.csproj
@@ -165,6 +165,9 @@
     <None Include="TilbudsApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Byer.jpg" />
+    <Content Include="Assets\med.PNG" />
+    <Content Include="Assets\upsi.PNG" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
